--- a/frontend/admin_login.html
+++ b/frontend/admin_login.html
@@ -70,12 +70,13 @@
 <body>
   <div class="form-container">
     <h2>Login</h2>
-    <form action="/login" method="post">
+    <form action="../backend/api/admin.php" method="post">
       <input type="email" name="email" placeholder="Email" required />
       <input type="password" name="password" placeholder="Password" required />
       <button type="submit">Log In</button>
     </form>
-    <p>Don't have an account? <a href="signup.html">Sign up</a></p>
+    <p>Don't have an account? <a href="index.html">home</a></p>
+
   </div>
 </body>
 </html>
