security and some functionality

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -5,88 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign Up - Smart Quiz</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #00c9ff, #92fe9d);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      padding: 1rem;
-      color: #333;
-    }
-    .form-container {
-      background: white;
-      padding: 2rem;
-      border-radius: 15px;
-      width: 100%;
-      max-width: 400px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-      transition: box-shadow 0.3s ease, transform 0.3s ease;
-    }
-    .form-container:hover {
-      box-shadow: 0 15px 30px rgba(0,0,0,0.25);
-      transform: translateY(-5px);
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 1.5rem;
-      color: #00c9ff;
-    }
-    input {
-      width: 100%;
-      padding: 0.75rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      font-size: 1rem;
-      transition: border 0.3s ease;
-    }
-    input:focus {
-      outline: none;
-      border-color: #00c9ff;
-    }
-    button {
-      width: 100%;
-      padding: 0.75rem;
-      background: #00c9ff;
-      color: white;
-      font-size: 1rem;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s ease;
-    }
-    button:hover {
-      background: #3be8b0;
-      transform: scale(1.02);
-    }
-    p {
-      margin-top: 1rem;
-      text-align: center;
-    }
-    a {
-      color: #00c9ff;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    @media (max-width: 480px) {
-      .form-container {
-        padding: 1.5rem 1rem;
-      }
-      h2 {
-        font-size: 1.5rem;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="css/signup.css">
 </head>
 <body>
   <div class="form-container">
