--- a/frontend/add_quiz.html
+++ b/frontend/add_quiz.html
@@ -4,79 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Add Quiz</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #4facfe, #00f2fe);
-      margin: 0;
-      padding: 2rem;
-      color: #333;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 1.5rem;
-      color: #0077b6;
-    }
-    .form-group {
-      margin-bottom: 1rem;
-    }
-    label {
-      display: block;
-      font-weight: 600;
-      margin-bottom: 0.5rem;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 0.7rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    .question-block {
-      margin-top: 1.5rem;
-      padding: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      background: #f9f9f9;
-    }
-    .option-input {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      margin-bottom: 0.5rem;
-    }
-    .add-btn, .submit-btn {
-      display: block;
-      width: 100%;
-      padding: 0.75rem;
-      font-size: 1rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      margin-top: 1rem;
-    }
-    .add-btn {
-      background-color: #0077b6;
-      color: white;
-    }
-    .add-btn:hover {
-      background-color: #023e8a;
-    }
-    .submit-btn {
-      background-color: #00b4d8;
-      color: white;
-    }
-    .submit-btn:hover {
-      background-color: #0077b6;
-    }
-  </style>
+  <link rel="stylesheet" href="css/add_quiz.css">
 </head>
 <body>
 
