--- a/frontend/admin_dashboard.html
+++ b/frontend/admin_dashboard.html
@@ -4,68 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f8f9fa;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background: #1d3557;
-      color: white;
-      padding: 1rem 2rem;
-      text-align: center;
-    }
-
-    main {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 2rem;
-      gap: 2rem;
-    }
-
-    .card {
-      background: white;
-      padding: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      width: 300px;
-      transition: transform 0.2s ease;
-      text-align: center;
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
-    }
-
-    .card h3 {
-      margin-bottom: 1rem;
-      color: #1d3557;
-    }
-
-    .card a {
-      display: inline-block;
-      margin-top: 0.5rem;
-      padding: 0.6rem 1.2rem;
-      background: #1d3557;
-      color: white;
-      border-radius: 6px;
-      text-decoration: none;
-      font-size: 0.95rem;
-      transition: background 0.3s ease;
-    }
-
-    .card a:hover {
-      background: #457b9d;
-    }
-  </style>
+  <link rel="stylesheet" href="css/admin_dashboard.css">
 </head>
 <body>
   <header>
     <h1>Admin Dashboard</h1>
+   
   </header>
 
   <main>
@@ -81,7 +25,7 @@
 
     <div class="card">
       <h3>View User History</h3>
-      <a href="view_history.html">Go</a>
+      <a href="../backend/api/view_history.php">Go</a>
     </div>
   </main>
 
