--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,74 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smart Quiz App</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <style>
-    body {
-      background: linear-gradient(to right, #83a4d4, #b6fbff);
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    .hero {
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 2rem;
-      background: rgba(255, 255, 255, 0.85);
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: 700;
-      color: #2d3748;
-      margin-bottom: 1rem;
-    }
-
-    .hero p {
-      font-size: 1.25rem;
-      color: #4a5568;
-      margin-bottom: 2rem;
-    }
-
-    .hero a.btn {
-      font-size: 1rem;
-      padding: 0.75rem 1.5rem;
-      border-radius: 50px;
-      text-decoration: none;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .btn-primary {
-      background-color: #4c51bf;
-      border-color: #4c51bf;
-    }
-
-    .btn-primary:hover {
-      background-color: #434190;
-      border-color: #434190;
-    }
-
-    .btn-outline-light {
-      color: #4c51bf;
-      border-color: #4c51bf;
-    }
-
-    .btn-outline-light:hover {
-      background-color: #4c51bf;
-      color: white;
-    }
-
-    @media (max-width: 768px) {
-      .hero h1 {
-        font-size: 2.25rem;
-      }
-      .hero p {
-        font-size: 1rem;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <div class="hero">
