--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="hero">
     <div>
-      <h1>Welcome to Smart Quiz</h1>
-      <p>Test your knowledge and track your progress.</p>
+      <h1>Welcome to Smart Quiz ,<br> Your daily practice gurantes your future knowledge </h1>
+      <p>Test your knowledge and grow with us.</p>
       <a href="login.html" class="btn btn-primary">Login</a>
       <a href="signup.html" class="btn btn-outline-light">Sign Up</a>
     </div>
