--- a/frontend/add_quiz.html
+++ b/frontend/add_quiz.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="css/add_quiz.css">
 </head>
 <body>
+ 
+  <div id="success-popup" class="popup">
+    <p id="popup-message"></p>
+  </div>
 
 <div class="container">
   <h2>Create a New Quiz</h2>
@@ -30,6 +34,8 @@
 </div>
 
 <script>
+
+ 
   let questionCount = 0;
 
   function addQuestion() {
@@ -65,6 +71,26 @@
     container.appendChild(block);
     questionCount++;
   }
+
+  
+  function getQueryParam(key) {
+      return new URLSearchParams(window.location.search).get(key);
+    }
+  
+    const addition = getQueryParam('addition');
+    if (addition==='success') {
+      const popup = document.getElementById('success-popup');
+      const popupMessage=document.getElementById('popup-message');
+      popupMessage.textContent='question was added successfully!';
+
+      popup.classList.remove('hidden');
+      popup.classList.add('show');
+  
+      setTimeout(() => {
+        popup.classList.remove('show');
+        popup.classList.add('hidden');
+      }, 3000); // 3 seconds
+    }
 </script>
 
 </body>
