--- a/frontend/admin_login.html
+++ b/frontend/admin_login.html
@@ -10,14 +10,32 @@
 <body>
   <div class="form-container">
     <h2>Login</h2>
+    <p id="in_pe"></p>
     <form action="../backend/api/admin.php" method="post">
       <input type="email" name="email" placeholder="Email" required />
       <input type="password" name="password" placeholder="Password" required />
       <button type="submit">Log In</button>
     </form>
     <p>Don't have an account? <a href="index.html">home</a></p>
-
   </div>
+  <script>
+    function getUrl(key){
+        return new URLSearchParams(window.location.search).get(key);
+    }
+    const e=getUrl('email');
+    const p=getUrl('password');
+
+    if (e === 'f' || p === 'f') {
+    const ptext = document.getElementById('in_pe'); 
+    ptext.innerText = 'Email or password is incorrect. Please try again.'; 
+    ptext.style.color = 'red';
+    ptext.style.padding = '2em';
+    setTimeout(() => {
+        ptext.innerText = '';
+        ptext.style.padding = '';
+    }, 3000);
+}
+</script>
 </body>
 </html>
 
