--- a/frontend/login.html
+++ b/frontend/login.html
@@ -10,6 +10,7 @@
 <body>
   <div class="form-container">
     <h2>Login</h2>
+    <p id="in_pe"></p>
     <form action="../backend/api/login.php" method="post">
       <input type="email" name="email" placeholder="Email" required />
       <input type="password" name="password" placeholder="Password" required />
@@ -20,6 +21,24 @@
 
   </div>
 </body>
+<script>
+    function getUrl(key){
+        return new URLSearchParams(window.location.search).get(key);
+    }
+    const e=getUrl('email');
+    const p=getUrl('password');
+
+    if (e === 'f' || p === 'f') {
+    const ptext = document.getElementById('in_pe'); 
+    ptext.innerText = 'Email or password is incorrect. Please try again.'; 
+    ptext.style.color = 'red';
+    ptext.style.padding = '2em';
+    setTimeout(() => {
+        ptext.innerText = '';
+        ptext.style.padding = '';
+    }, 3000);
+}
+</script>
 </html>
 
 <!-- signup.html, quiz.html, and result.html will follow with a matching theme and high responsiveness -->
