--- a/frontend/add_quiz.html
+++ b/frontend/add_quiz.html
@@ -29,7 +29,7 @@
     <div id="questions-container"></div>
 
     <button type="button" class="add-btn" onclick="addQuestion()">+ Add Question</button>
-    <button type="submit" class="submit-btn">Add</button>
+    <button type="submit" class="submit-btn">Submit</button>
   </form>
 </div>
 
