--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="hero">
     <div>
-      <h1>Welcome to Smart Quiz ,<br> Your daily practice gurantes your future knowledge </h1>
+      <h1>Welcome to Smart Quiz ,<br> Your daily practice determines your future knowledge </h1>
       <p>Test your knowledge and grow with us.</p>
       <a href="login.html" class="btn btn-primary">Login</a>
       <a href="signup.html" class="btn btn-outline-light">Sign Up</a>
