--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,4 +1,4 @@
-<!-- login.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,24 +21,5 @@
 
   </div>
 </body>
-<script>
-    function getUrl(key){
-        return new URLSearchParams(window.location.search).get(key);
-    }
-    const e=getUrl('email');
-    const p=getUrl('password');
-
-    if (e === 'f' || p === 'f') {
-    const ptext = document.getElementById('in_pe'); 
-    ptext.innerText = 'Email or password is incorrect. Please try again.'; 
-    ptext.style.color = 'red';
-    ptext.style.padding = '2em';
-    setTimeout(() => {
-        ptext.innerText = '';
-        ptext.style.padding = '';
-    }, 3000);
-}
-</script>
+<script src="js/login.js"></script>
 </html>
-
-<!-- signup.html, quiz.html, and result.html will follow with a matching theme and high responsiveness -->
