--- a/frontend/result.html
+++ b/frontend/result.html
@@ -14,22 +14,7 @@
     <a href="quiz_dashboard.php" class="home-btn">🏠 Back to Home</a>
   </div>
 
-  <script>
-    fetch('../backend/j/get_result.php')
-      .then(response => response.json())
-      .then(data => {
-        if (data.success) {
-          document.getElementById('score').textContent =
-            `You scored ${data.score} out of ${data.total} on ${data.time}`;
-        } else {
-          document.getElementById('score').textContent = "No result available.";
-        }
-      })
-      .catch(err => {
-        document.getElementById('score').textContent = "Error fetching result.";
-        console.error(err);
-      });
-  </script>
+  <script src="js/result.js"></script>
 
 </body>
 </html>
